# ai-agent-sdk

./: CLAUDE.md  Cargo.toml  READCN.md  README.md  gaps.md
examples/: 01_simple_query.rs  03_multi_turn.rs  14_compaction.rs  16_invoke_skill.rs  22_sessions.rs  26_conversation_memory.rs  27_interrupt.rs
src/: agent.rs  agent_tests.rs  api_request.rs  cli_ndjson_safe_stringify.rs  compact.rs  cost_tracker.rs  extract_memories.rs  hooks.rs  lib.rs  permission.rs  query_engine.rs  session.rs  session_memory.rs  session_restore.rs  stream.rs  streaming_tool_executor.rs  team_memory.rs  test_utils.rs  token_budget.rs  tool.rs  tool_errors.rs  tool_helper.rs  tool_result_storage.rs  tool_validation.rs
src/bootstrap/: state.rs
src/hook_utils/: use_away_summary.rs  use_session_backgrounding.rs
src/memdir/: find_relevant_memories.rs  mod.rs
src/plugin/: builtin_plugins.rs  mcp.rs  skills.rs
src/services/: away_summary.rs  message_normalization.rs  mod.rs  model_cost.rs  streaming.rs  token_estimation.rs  tool_execution.rs
src/skills/: loader.rs  mcp_skill_builders.rs  mod.rs
src/tests/: agent.rs  mod.rs  permission.rs  plugin_operations.rs  query_engine.rs  stream_interface.rs  team_memory.rs  tool.rs
src/tools/: ask.rs  assemble.rs  background_task_registry.rs  bash.rs  config.rs  cron.rs  edit.rs  glob.rs  grep.rs  lsp.rs  mcp_resource_reader.rs  mcp_resources.rs  mod.rs  monitor.rs  notebook_edit.rs  orchestration.rs  plan.rs  read.rs  search.rs  send_user_file.rs  skill.rs  sleep_tool.rs  task_stop.rs  tasks.rs  team.rs  (+7 more)
tests/: session_agent_integration.rs
(+98 files in other folders)
