[package]
name = "ai-agent"
version = "0.88.0"
edition = "2024"
authors = ["Sunding Wei"]
license = "MIT"
description = "Idiomatic agent sdk inspired by the claude code source leak"
repository = "https://github.com/sweihub/ai-agent-sdk"
documentation = "https://docs.rs/ai-agent-sdk"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
hostname = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
walkdir = "2"
regex = "1"
tokio-retry = "0.3"
urlencoding = "2"
dirs = "5"
log = "0.4"
url = "2"
futures-util = "0.3"
bytes = "1"
base64 = "0.22"
zip = "2"
once_cell = "1"
parking_lot = "0.12"
lazy_static = "1"
sha2 = "0.10"
serde_yaml = "0.9"
hex = "0.4"
lru = "0.12"
similar = "2"
libc = "0.2"
atty = "0.2"
rand = "0.8"
anyhow = "1"
rust-mcp-sdk = { version = "0.9.0", features = ["rust-mcp-macros"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
